Correcting issue with nested containers(removing). Making cards less transparent for readability.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@ body{
 }
 
 .card{
-    background:rgba(255,255,255,0.5);
+    background:rgba(255,255,255,0.7);
 }
 
 
@@ -37,4 +37,14 @@ body{
 
 #videoID {
     display:block;
+}
+
+#scoreBoardAndImg {
+    display: block;
+    border: none;
+    background: none;
+}
+
+#instructions{
+    background-color: rgba(255,255,255,0.70);
 }
